css/advsearch: Fix EC vertical alignment
Issue #321.

--- a/resources/css/advsearch.less
+++ b/resources/css/advsearch.less
@@ -38,3 +38,15 @@
   /* Margin between footer and submit button: */
   margin-bottom: 20px;
 }
+
+// Enzyme Commision number input text fields
+div.ec {
+  display: table-cell;
+  padding: 0 8px;
+}
+div.ec:first-of-type {
+  padding-left: 0;
+}
+div.ec:last-of-type {
+  padding-right: 0;
+}
